--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,21 +8,20 @@ jobs:
   build-deploy:
     runs-on: ubuntu-latest
     steps:
-      # 1. Check out the repository code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # 3. Log in to Amazon ECR
+      # -- FIX: Pass AWS creds & region to amazon-ecr-login --
       - name: Log in to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
         with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           region: us-east-2
 
-      # 4. Build, Tag, and Push Docker Image
       - name: Build, Tag, and Push Docker Image
         env:
           ECR_REPOSITORY: devhub-backend
@@ -32,11 +31,9 @@ jobs:
           docker tag $ECR_REPOSITORY:latest $ECR_REGISTRY/$ECR_REPOSITORY:latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
-      # 5. Deploy ECS Task Definition
       - name: Deploy ECS Task Definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          # Reference your GitHub secrets for AWS credentials
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
@@ -45,4 +42,3 @@ jobs:
           service: devhub-backend-service
           cluster: DevHubCluster
           wait-for-service-stability: true
-# Trigger new run with updated AWS credentials
