--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,15 +28,14 @@ jobs:
       - name: Log in to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
 
-      # 5. Build, Tag, and Push Docker Image
-      - name: Build, Tag, and Push Docker Image
+        - name: Build, Tag, and Push Docker Image
         env:
           ECR_REPOSITORY: devhub-backend
           ECR_REGISTRY: 911167909056.dkr.ecr.us-east-2.amazonaws.com
         run: |
-          docker build -t $ECR_REPOSITORY .
+          docker build -f backend/Dockerfile -t $ECR_REPOSITORY backend/
           docker tag $ECR_REPOSITORY:latest $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest      
 
       # 6. Deploy ECS Task Definition
       - name: Deploy ECS Task Definition
