Switch to image-definitions for partial ECS updates

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
-          task-definition: imagedefinitions.json
+          image-definition: imagedefinitions.json
           service: devhub-backend-service
           cluster: DevHubCluster
           wait-for-service-stability: true
