Trigger new run for ECS deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,10 +36,8 @@ jobs:
       - name: Deploy ECS Task Definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
-          image-definition: imagedefinitions.json
+          task-definition: "DevHubTask"
+          image-definitions: imagedefinitions.json
           service: devhub-backend-service
           cluster: DevHubCluster
           wait-for-service-stability: true
