Trigger new workflow run after adding iam:PassRole permission

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,4 @@ jobs:
           service: devhub-backend-service
           cluster: DevHubCluster
           wait-for-service-stability: true
-#2 - Create a new ECS Task Definition
+#3 - trying again
