--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
     "@tailwindcss/postcss": "^4.0.10",
     "@vue/cli-service": "^5.0.8",
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.2.7"
@@ -21,6 +22,7 @@
   },
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "deploy": "gh-pages -d dist"
   }
 }
