--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 .terraform/
 *.tfstate
 *.tfstate.backup
+node_modules
+.terraform
+.DS_Store
+dist
+.env
+.env*
+*.tfvars
+.terraform/
+terraform.tfstate*
+node_modules/
+dist/
+.DS_Store
